# macro-qgis-plugin

./: .copyright-header.txt  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  whitelist.txt
.github/workflows/: code-style.yml  release.yml  tests.yml
components/core/: README.md  pyproject.toml
components/core/src/macro_test_utils/: __init__.py  macro_fixture.py  macro_utils.py  utils.py
components/core/src/qgis_macros/: __init__.py  constants.py  exceptions.py  macro.py  macro_player.py  macro_recorder.py  settings.py  utils.py
components/core/test/: conftest.py  test_macro.py  test_macro_player.py  test_macro_recorder.py  test_widget_path.py
components/plugin/: README.md  pyproject.toml
components/plugin/src/macro_plugin/: __init__.py  metadata.txt  plugin.py
components/plugin/src/macro_plugin/ui/: __init__.py  macro_model.py  macro_panel.py  settings_dialog.py
components/plugin/test/: conftest.py  test_macro_model.py  test_macro_panel.py  test_settings_dialog.py
docs/: DEVELOPMENT.md  _qgis_stubs.py  conf.py  getting-started.rst  index.rst
docs/core/: exceptions.rst  index.rst  macro.rst  macro_player.rst  macro_recorder.rst  settings.rst  utils.rst
docs/plugin/: index.rst  macro_model.rst  macro_panel.rst  plugin.rst  settings_dialog.rst
src/macro_plugin/: metadata.txt  plugin.py
src/macro_plugin/ui/: macro_model.py  macro_panel.py  macro_panel.ui  settings_dialog.py
src/macro_test_utils/: macro_fixture.py  macro_utils.py  utils.py
src/qgis_macros/: __init__.py  constants.py  exceptions.py  macro.py  macro_player.py  macro_recorder.py  settings.py  utils.py
test/: conftest.py  test_macro.py  test_macro_player.py  test_macro_recorder.py  test_macros.py
test/plugin/: test_macro_model.py  test_macro_panel.py  test_settings_dialog.py
